style.css
*{
  /*border:1px solid black;*/
  /*background-color: grey;*/
  margin: 0 auto;
}

body{
  align-items: center;
  text-align: right;
}
h1{
    color: #FFD700;
  padding-top: 5px;
  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
	font-size: 40px;
	font-style: normal;
	font-variant: normal;
	font-weight: 500;
	line-height: 26.4px;
}
h2{
    color: #FFD700;
  padding-top: 5px;
  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
	font-size: 20px;
	font-style: normal;
	font-variant: normal;
	font-weight: 500;
	line-height: 26.4px;
}
.container{
  width:350px;
  height:600px;
  background-color: #C0C0C0;
  margin-top: 10px;
  box-shadow: 5px 5px 5px 5px #696969;
  border-radius: 15px;
  padding-top: 15px;
  border: 5px solid #708090;
  box-sizing: border-box;
}

.memory{
  padding-top: 20px;
}

.row{
  width: 92%;
  margin: 0 4%;
}
.twoThirds{
  width: 50%;
  align-items: left;
  float: left;
  margin-left: 4%;
}
.oneThird{
  width: 39%;
  float: right;
  margin-right: 4%;
}

.bar{
  padding-right: 10px;
  height: 40px;
  background-color: #696969;
  margin-top: 5px;
}

.grid{
  margin-top: 5px;
  text-align: center;
  display: inline-block;
  border-radius: 4px;
  height: 50px;
  width: 50px;
  align-items: center;
  padding-top: 20px;
  border: 1px solid black;
}

.doubleGrid{
  margin-top: 5px;
  text-align: center;
  display: inline-block;
  border-radius: 4px;
  height: 50px;
  width: 105px;
  align-items: center;
  padding-top: 20px;
  border: 1px solid black;
}

.click{
  font-size: 20px;
  background-image: linear-gradient(#708090,#D3D3D3,#708090);
  cursor: pointer;
  box-shadow: 0px 5px 5px 0px #696969;
}
.click:hover{
  box-shadow: 0px 10px 20px 0px #696969;
}

